--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -28,3 +28,17 @@ spec:
       containers:
         - name: nginx
           image: joindevops/mysql:1.0.0
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: mysql
+spec:
+  selector: #labels used as selectors
+    app: mysql
+    tier: database
+    project: expense
+  ports:
+    - protocol: TCP #port details
+      port: 3306
+      targetPort: 3306
